# GmgnTwitterTgAlert

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  ctl.py  gmgn-twitter-monitor.service  gmgn_twitter_monitor.py  install.sh  pyproject.toml  requirements.txt  test_socks.py
gmgn_twitter_monitor/: __init__.py  __main__.py  app.py  browser.py  config.py  distributor.py  logging_setup.py  models.py  parser.py  storage.py  summarizer.py  summary_scheduler.py  summary_store.py  translator.py  watchdog.py
scripts/: install_root_ubuntu.sh  install_warp_proxy.sh
tests/: test_google_verification_code.py  test_summary_config.py  test_summary_scheduler.py  test_summary_store.py  test_telegram_only.py  test_telegram_routing.py
